--user=sunguangxin --task=添加GXPlayer库。

--- a/universal/BUILD
+++ b/universal/BUILD
@@ -13,6 +13,7 @@ objc_library(
     ],
     deps = [
         "//srcs/app/GXHome:gxhome_library",
+        "//srcs/app/GXPlayer:gxplayer_library",
     ],
     # sdk_dylibs = ["xml2", "resolv", "z", "bz2"],
     # resources = glob(["universal/launch*.png"]),
