--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,38 @@ bazel-GXBazelShell
 bazel-out
 bazel-testlogs
 
+# bazel
+*.xcodeproj/
+
+# external
+external
+
 # tulsi
 tulsi-workspace
 default.profraw
 
 # xcode
-universal/universal.xcodeproj
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+*.xcuserdata
+*.xcuserdatad
+xcuserdatad
+xcuserdata
+*.xcscmblueprint
+Carthage
+*.xccheckout
+output/*
+builder/output*
+ibiliplayer/contrib2*
+contrib
+contribhash
+PodLinker/build/
+.vscode
+bazel-*
+tulsi*
+*.tulsiconf-user
+
