--user=sunguangxin --task=引入rxswift

--- a/srcs/app/GXHome/BUILD
+++ b/srcs/app/GXHome/BUILD
@@ -7,6 +7,6 @@ swift_library(
     srcs = glob(["**/*.swift"]),
     deps = [
         "@iglistkit//:IGListKit",
-        #"@rxswift//:RxCocoa",
+        "@rxswift//:RxCocoa",
     ],
 )
