--user=sunguangxin --task=1.实现识别pan手势是横滑还是竖滑。2.解决自定义手势与列表滑动手势冲突

--- a/srcs/common/GXCNavigationController/BUILD
+++ b/srcs/common/GXCNavigationController/BUILD
@@ -3,11 +3,10 @@ package(default_visibility = ["//visibility:public"])
 load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
 
 swift_library(
-    name = "home_library",
+    name = "gxcnavigationcontroller_library",
     srcs = glob(["**/*.swift"]),
     deps = [
-        "@iglistkit//:IGListKit",
         "@rxswift//:RxCocoa",
-        "//srcs/app/GXPlayer:gxplayer_library",
     ],
+    module_name = "Navigationcontroller_library"
 )
