--- a/srcs/common/GXCTabBarController/BUILD
+++ b/srcs/common/GXCTabBarController/BUILD
@@ -3,11 +3,10 @@ package(default_visibility = ["//visibility:public"])
 load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
 
 swift_library(
-    name = "home_library",
+    name = "gxctabbarcontroller_library",
     srcs = glob(["**/*.swift"]),
     deps = [
-        "@iglistkit//:IGListKit",
         "@rxswift//:RxCocoa",
-        "//srcs/app/GXPlayer:gxplayer_library",
     ],
+    module_name = "TabBarController_library"
 )
